added switching between peer db's

--- a/package.json
+++ b/package.json
@@ -17,54 +17,57 @@
 	},
 	"dependencies": {
 		"@chainsafe/libp2p-gossipsub": "^14.1.1",
-		"@chainsafe/libp2p-noise": "^16.1.0",
-		"@chainsafe/libp2p-yamux": "^7.0.1",
-		"@helia/unixfs": "^4.0.3",
-		"@libp2p/autonat": "^2.0.28",
+		"@chainsafe/libp2p-noise": "^16.1.4",
+		"@chainsafe/libp2p-yamux": "^7.0.4",
+		"@helia/unixfs": "^5.0.3",
+		"@libp2p/autonat": "^2.0.37",
 		"@libp2p/bootstrap": "^11.0.46",
-		"@libp2p/circuit-relay-v2": "^3.2.8",
-		"@libp2p/crypto": "^5.0.15",
-		"@libp2p/dcutr": "^2.0.27",
-		"@libp2p/identify": "^3.0.27",
+		"@libp2p/circuit-relay-v2": "^3.2.23",
+		"@libp2p/crypto": "^5.1.7",
+		"@libp2p/dcutr": "^2.0.37",
+		"@libp2p/identify": "^3.0.38",
 		"@libp2p/interface": "^2.7.0",
 		"@libp2p/interface-internal": "^2.3.9",
 		"@libp2p/interface-pubsub": "^4.0.1",
 		"@libp2p/interface-transport": "^4.0.3",
-		"@libp2p/kad-dht": "^14.2.15",
+		"@libp2p/kad-dht": "^15.1.10",
 		"@libp2p/logger": "^5.1.13",
 		"@libp2p/peer-id": "^5.1.0",
 		"@libp2p/peer-id-factory": "^4.2.4",
-		"@libp2p/ping": "^2.0.27",
-		"@libp2p/pubsub-peer-discovery": "^11.0.1",
-		"@libp2p/tcp": "^10.1.8",
-		"@libp2p/webrtc": "^5.2.9",
-		"@libp2p/websockets": "^9.2.8",
-		"@libp2p/webtransport": "^5.0.37",
+		"@libp2p/ping": "^2.0.36",
+		"@libp2p/pubsub-peer-discovery": "^11.0.2",
+		"@libp2p/tcp": "^10.1.18",
+		"@libp2p/webrtc": "^5.2.23",
+		"@libp2p/websockets": "^9.2.18",
+		"@libp2p/webtransport": "^5.0.50",
 		"@multiformats/multiaddr": "^12.4.0",
-		"@orbitdb/core": "^2.5.0",
+		"@orbitdb/core": "^3.0.2",
 		"bip32": "5.0.0-rc.0",
 		"bip39": "^3.1.0",
+		"blockstore-core": "^5.0.4",
 		"blockstore-level": "^2.0.1",
 		"clsx": "^2.1.1",
+		"datastore-core": "^10.0.4",
 		"datastore-level": "^11.0.1",
 		"debug": "^4.4.0",
 		"dompurify": "^3.2.4",
-		"dotenv": "^16.4.7",
+		"dotenv": "^17.2.0",
 		"esm-env": "^1.2.2",
 		"express": "^4.21.2",
 		"hdkey": "^2.1.0",
 		"helia": "^5.3.0",
 		"it-all": "^3.0.7",
-		"it-length-prefixed": "^9.1.1",
+		"it-length-prefixed": "^10.0.1",
 		"it-map": "^3.1.2",
 		"it-pipe": "^3.0.1",
-		"it-protobuf-stream": "^1.1.6",
+		"it-protobuf-stream": "^2.0.3",
 		"key-did-provider-ed25519": "^4.0.2",
 		"key-did-resolver": "^4.0.0",
-		"libp2p": "^2.8.2",
+		"libp2p": "^2.9.0",
 		"libp2p-crypto": "^0.21.2",
+		"multiaddr": "^10.0.1",
 		"uint8arrays": "^5.1.0",
-		"vite-plugin-node-polyfills": "^0.23.0",
+		"vite-plugin-node-polyfills": "^0.24.0",
 		"vite-plugin-wasm": "^3.4.1"
 	},
 	"devDependencies": {
