--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"relay": "node relay/relay.js",
 		"test:e2e": "npm run build && playwright test",
 		"test:node": "mocha tests/node/**/*.test.js",
+		"test:manual": "mocha tests/node/manual.test.js",
 		"test": "npm run test:e2e && npm run test:node"
 	},
 	"dependencies": {
@@ -37,6 +38,8 @@
 		"@libp2p/ping": "^2.0.36",
 		"@libp2p/pubsub-peer-discovery": "^11.0.2",
 		"@libp2p/tcp": "^10.1.18",
+		"@libp2p/tls": "^2.2.6",
+		"@libp2p/upnp-nat": "^3.1.21",
 		"@libp2p/webrtc": "^5.2.23",
 		"@libp2p/websockets": "^9.2.18",
 		"@libp2p/webtransport": "^5.0.50",
