--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"build": "vite build",
 		"preview": "vite preview --port 4173",
 		"relay": "node relay/relay.js",
+		"relay:enhanced": "node relay/relay-enhanced.js",
+		"relay:enhanced:verbose": "node relay/relay-enhanced.js --verbose",
 		"test:e2e": "npm run build && playwright test",
 		"test:node": "mocha tests/node/**/*.test.js",
 		"test:manual": "mocha tests/node/manual.test.js",
@@ -25,6 +27,7 @@
 		"@chainsafe/libp2p-noise": "^16.1.4",
 		"@chainsafe/libp2p-yamux": "^7.0.4",
 		"@helia/unixfs": "^5.0.3",
+		"@ipshipyard/libp2p-auto-tls": "^1.0.0",
 		"@libp2p/autonat": "^2.0.37",
 		"@libp2p/bootstrap": "^11.0.46",
 		"@libp2p/circuit-relay-v2": "^3.2.23",
@@ -36,10 +39,12 @@
 		"@libp2p/interface-pubsub": "^4.0.1",
 		"@libp2p/interface-transport": "^4.0.3",
 		"@libp2p/kad-dht": "^15.1.10",
+		"@libp2p/keychain": "^5.0.11",
 		"@libp2p/logger": "^5.1.13",
 		"@libp2p/peer-id": "^5.1.0",
 		"@libp2p/peer-id-factory": "^4.2.4",
 		"@libp2p/ping": "^2.0.36",
+		"@libp2p/prometheus-metrics": "^4.0.14",
 		"@libp2p/pubsub-peer-discovery": "^11.0.2",
 		"@libp2p/tcp": "^10.1.18",
 		"@libp2p/tls": "^2.2.6",
@@ -72,7 +77,6 @@
 		"key-did-resolver": "^4.0.0",
 		"libp2p": "^2.9.0",
 		"libp2p-crypto": "^0.21.2",
-		"multiaddr": "^10.0.1",
 		"uint8arrays": "^5.1.0",
 		"vite-plugin-node-polyfills": "^0.24.0",
 		"vite-plugin-wasm": "^3.4.1"
