--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,21 @@
-version: '3.8'
-
 services:
   relay:
     build:
-      context: ./relay
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: relay/Dockerfile
     environment:
       - RELAY_PRIV_KEY=${RELAY_PRIV_KEY}
-      - RELAY_WS_PORT=${RELAY_WS_PORT:-4001}
-      - RELAY_TCP_PORT=${RELAY_TCP_PORT:-4002}
+      - RELAY_TCP_PORT=${RELAY_TCP_PORT:-4001}
+      - RELAY_WS_PORT=${RELAY_WS_PORT:-4002}
+      - RELAY_WEBRTC_PORT=${RELAY_WEBRTC_PORT:-4006}
+      - RELAY_HTTP_PORT=${RELAY_HTTP_PORT:-3000}
     ports:
-      - "${RELAY_WS_PORT:-4001}:4001"
-      - "${RELAY_TCP_PORT:-4002}:4002"
+      - "${RELAY_TCP_PORT:-4001}:4001"
+      - "${RELAY_WS_PORT:-4002}:4002"
+      - "${RELAY_WEBRTC_PORT:-4006}:4006"
+      - "${RELAY_HTTP_PORT:-3000}:3000"
     restart: unless-stopped
+    command: ["node", "relay.js", "--verbose"]
     networks:
       - p2p-network
     volumes:
