--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,18 @@ services:
       - RELAY_WS_PORT=${RELAY_WS_PORT:-4002}
       - RELAY_WEBRTC_PORT=${RELAY_WEBRTC_PORT:-4006}
       - RELAY_HTTP_PORT=${RELAY_HTTP_PORT:-3000}
+      - DATASTORE_PATH=/app/relay-datastore
     ports:
       - "${RELAY_TCP_PORT:-4001}:4001"
       - "${RELAY_WS_PORT:-4002}:4002"
       - "${RELAY_WEBRTC_PORT:-4006}:4006"
       - "${RELAY_HTTP_PORT:-3000}:3000"
     restart: unless-stopped
-    command: ["node", "relay.js", "--verbose"]
+    command: ["node", "relay-enhanced.js", "--verbose"]
     networks:
       - p2p-network
     volumes:
-      - ./relay-datastore:/app/datastore
+      - ./relay-datastore:/app/relay-datastore
 
 networks:
   p2p-network:
