--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"test:standalone:pubsub": "node tests/standalone/test-pubsub-visibility.js",
 		"diagnostics:inspect": "node tests/diagnostics/inspect-storage.js",
 		"diagnostics:todos": "node tests/diagnostics/debug-todos.js",
+		"ipfs-publish": "./ipfs-publish.sh",
 		"test": "npm run test:e2e && npm run test:node"
 	},
 	"dependencies": {
