adding db manager card and improving relay discovery status

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,25 @@ ORBITDB_KEYSTORE=./keystore
 # Application ports
 DEV_PORT=5173
 PREVIEW_PORT=4173
+
+
+# Gossipsub
+GOSSIP_EMIT_SELF=true
+GOSSIP_ALLOW_PUBLISH_ZERO_TOPIC=true
+GOSSIP_CAN_RELAY_MESSAGE=true
+GOSSIP_INCOMING=true
+GOSSIP_FALLBACK_TO_FLOODSUB=true
+GOSSIP_FLOOD_PUBLISH=true
+GOSSIP_SCORE_GOSSIP_THRESHOLD=-Infinity
+GOSSIP_SCORE_PUBLISH_THRESHOLD=-Infinity
+GOSSIP_SCORE_GRAYLIST_THRESHOLD=-Infinity
+GOSSIP_SCORE_ACCEPT_PX_THRESHOLD=0
+GOSSIP_SCORE_OPPORTUNISTIC_GRAFT_THRESHOLD=0
+GOSSIP_HEARTBEAT_INTERVAL=1000
+
+# Relay
+RELAY_HOP_TIMEOUT=30000
+RELAY_MAX_RESERVATIONS=10000
+RELAY_RESERVATION_TTL=7200000
+RELAY_DEFAULT_DATA_LIMIT=1073741824
+RELAY_DEFAULT_DURATION_LIMIT=120000
