refactored App.svelte into services, wrote write-permission logic test

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"test:e2e": "npm run build && playwright test",
 		"test:node": "mocha tests/node/**/*.test.js",
 		"test:manual": "mocha tests/node/manual.test.js",
+		"test:write-permissions": "mocha tests/node/write-permission-system.test.js",
 		"test:standalone:emitself": "node tests/standalone/test-emitself-simple.js",
 		"test:standalone:pubsub": "node tests/standalone/test-pubsub-visibility.js",
 		"diagnostics:inspect": "node tests/diagnostics/inspect-storage.js",
@@ -44,6 +45,7 @@
 		"@libp2p/kad-dht": "^15.1.10",
 		"@libp2p/keychain": "^5.0.11",
 		"@libp2p/logger": "^5.1.13",
+		"@libp2p/mdns": "^11.0.46",
 		"@libp2p/peer-id": "^5.1.0",
 		"@libp2p/peer-id-factory": "^4.2.4",
 		"@libp2p/ping": "^2.0.36",
