configurable pubsub peer-discovery topics

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,7 @@ ORBITDB_KEYSTORE=./keystore
 # Application ports
 DEV_PORT=5173
 PREVIEW_PORT=4173
+
+# Pubsub peer discovery topics (comma-separated)
+PUBSUB_TOPICS=todo._peer-discovery._p2p._pubsub
+VITE_PUBSUB_TOPICS=todo._peer-discovery._p2p._pubsub
