--- a/package.json
+++ b/package.json
@@ -68,8 +68,11 @@
 		"dotenv": "^17.2.0",
 		"esm-env": "^1.2.2",
 		"express": "^4.21.2",
+		"express-rate-limit": "^8.0.1",
+		"express-slow-down": "^2.1.0",
 		"hdkey": "^2.1.0",
 		"helia": "^5.3.0",
+		"helmet": "^8.1.0",
 		"it-all": "^3.0.7",
 		"it-length-prefixed": "^10.0.1",
 		"it-map": "^3.1.2",
@@ -79,6 +82,7 @@
 		"key-did-resolver": "^4.0.0",
 		"libp2p": "^2.9.0",
 		"libp2p-crypto": "^0.21.2",
+		"p-queue": "^8.1.0",
 		"uint8arrays": "^5.1.0",
 		"vite-plugin-node-polyfills": "^0.24.0",
 		"vite-plugin-wasm": "^3.4.1"
