fixing pinning and unpinning

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"key-did-resolver": "^4.0.0",
 		"libp2p": "^2.9.0",
 		"libp2p-crypto": "^0.21.2",
+		"multiformats": "^13.3.7",
 		"p-queue": "^8.1.0",
 		"uint8arrays": "^5.1.0",
 		"vite-plugin-node-polyfills": "^0.24.0",
