securing api endpoint with a password, added drop db

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ PINNING_ALLOWED_IDENTITIES=
 # ORBITDB_ALLOWED_IDENTITIES= 
 # ALLOWED_PEER_IDS=
 # PINNING_IDENTITY_FILTER=
+
+# API Security Configuration
+# Password for REST API endpoints (except /metrics)
+# Leave empty to disable authentication (not recommended for production)
+API_PASSWORD=your-secure-password-here
